samples/_failures_safe/1761539901_99b7b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15f83b07.c: In function ‘main’:
./samples/SAFE/__tmp_15f83b07.c:158:22: error: expected ‘;’ at end of input
  158 |     execute_operation
      |                      ^
      |                      ;
./samples/SAFE/__tmp_15f83b07.c:158:5: error: expected declaration or statement at end of input
  158 |     execute_operation
      |     ^~~~~~~~~~~~~~~~~
